Added Discord integration.

--- a/CthulhuBotPy/web/style.css
+++ b/CthulhuBotPy/web/style.css
@@ -201,3 +201,8 @@ p {margin-top: 10px; color: rgba(255,255,255,0.4);}
     white-space: nowrap;
     line-height: 1.5;
 }
+
+#test {
+    margin-top: 50px;
+    background-color: #E81123;
+}
