--- a/CthulhuBotPy/web/style.css
+++ b/CthulhuBotPy/web/style.css
@@ -110,14 +110,55 @@ p {margin-top: 10px; color: rgba(255,255,255,0.4);}
 
 /* hand-written code below */
 
+:root{
+    --outer-colour: rgb(227,229,232);
+    --channel-bar: rgb(242,243,245);
+    --bot-bar: rgb(235,237,239);
+    --message-bar: rgb(255,255,255);
+    --message-input: rgb(235,237,239);
+    --user-bar: rgb(242,243,245);
+    --channel-top-hover: rgb(232,234,237);
+    --line-break: rgb(209,211,215);
+    --message-hover: rgb(250,250,250);
+    --border-bottom: rgb(208,208,210);
+    --title-bar-hover: rgb(218,221,225);
+    --icon: rgb(79,86,96);
+    --icon-hover: rgb(6,6,7);
+    --text-normal: rgb(46, 51, 56);
+}
+
+body {
+    line-height: 1;
+    font-family: 'uni_sans_heavy-webfont.woff2', Arial, sans-serif;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+body {
+    /* border: 0.01px solid transparent;  */
+    overflow-y: hidden; 
+} 
+
 #titlebar {
     -webkit-app-region: drag;
-    color: #FFF;
+    color: var(--text-normal);
     display: block;
     position: fixed;
     height: 22px;
     width: 100%; /*Compensate for body 1px border*/
-    background: #202225;
+    background: var(--outer-colour);
 
     /* padding: 4px; */
 }
@@ -149,11 +190,11 @@ p {margin-top: 10px; color: rgba(255,255,255,0.4);}
 }
 
 #window-controls .button:hover {
-    background: rgba(255,255,255,0.1);
+    background: var(--title-bar-hover);
     cursor: pointer;
 }
 #window-controls .button:active {
-    background: rgba(255,255,255,0.2);
+    background: var(--title-bar-hover);
 }
 
 #close-button:hover {
@@ -207,6 +248,424 @@ p {margin-top: 10px; color: rgba(255,255,255,0.4);}
     background-color: #E81123;
 }
 
-textarea {
-    margin: 25px;
+#main {
+    height: calc(100% - 32px);
+    margin-top: 22px;
+    padding: 20px;
+    overflow-y: auto;
+}
+
+#overallcontainer {
+    background-color: var(--outer-colour);
+    width: 100%;
+    height: 100%;
+    /* margin-top: 22px; */
+    display: flex;
+    /* overflow-y: hidden; */
+}
+
+#overallcontainer #serverBar {
+    width: 72px !important;
+    /* width: 7.659574468%; */
+    height: 100%;
+    /* height: 2000px; */
+    /* overflow: auto; */
+    background-color: var(--outer-colour);
+}
+#overallcontainer #channelBar {
+    width: 240px;
+    /* width: 25.531914893%; */
+    height: 100%;
+    background-color: var(--outer-colour);
+}
+#overallcontainer #messageBar {
+    /* min-width: 372px; */
+    /* width: 42.127659574%; */
+    width: calc(100% - 544px);
+    height: 100%;
+    overflow-y: auto;
+    background-color: var(--message-bar);
+}
+#overallcontainer #userBar {
+    width: 232px;
+    /* width: 24.680851063%; */
+    height: 100%;
+    background-color: var(--user-bar);
+}
+
+.fixed-top {
+    margin-top: 22px;
+    height: 48px;
+    /* width: 100%; */
+    position: fixed;
+    /* box-shadow: 1px 0px 18px #888888; */
+    border-bottom: 0.6px solid var(--border-bottom);
+
+}
+
+#channelTop {
+    border-top-left-radius: 10px;
+    background-color: var(--channel-bar);
+    width: 240px;
+    /* box-shadow: 0px 0px 18px 2px #232427; */
+}
+
+#channelTop:hover {
+    background-color: var(--channel-top-hover);
+    cursor: pointer;
+}
+
+#messageTop {
+    background-color: var(--message-bar);
+    width: calc(100% - 312px);
+    /* box-shadow: 10px 0px 18px 2px #232427; */
+}
+
+#serverContainer::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
+
+#serverContainer {
+    margin-top: 22px;
+    height: calc(100% - 22px);
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+#serverArea {
+    /* background-image: linear-gradient(purple, pink); */
+    align-items: center;
+    height: calc(100% - 70px);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#channelContainer {
+    margin-top: 70px;
+    height: calc(100% - 122px);
+    overflow-y: auto;
+    background-color: var(--channel-bar);
+}
+
+#channelArea {
+    /* background-image: linear-gradient(green, blue); */
+    /* height: 10000px; */
+    background-color: var(--channel-bar);
+}
+
+#messageContainer {
+    margin-top: 70px;
+    height: calc(100% - 140px);
+    overflow-y: auto;
+}
+
+#messageArea {
+    color: #dcddde;
+    overflow-x: hidden;
+    /* background-image: linear-gradient(red, yellow); */
+    /* height: 10000px; */
+}
+
+#serverArea img {
+    height: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+    border-radius: 50%;
+    margin-top: 10px;
+    transition: border-radius 0.3s;
+    background-color: transparent;
+}
+
+#serverArea img:hover {
+    border-radius: 35%;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.no-server-icon {
+    height: 50px;
+    padding-top: 12.5px;
+    padding-bottom: 12.5px;
+    padding-right: 10px;
+    padding-left: 10px;
+    width: 50px;
+    border-radius: 50%;
+    margin-top: 10px;
+    background-color: white;
+    color: var(--text-normal);
+    text-align: center;
+    font-size: 24px;
+    transition: border-radius 0.3s;
+    -webkit-user-select: none;
+}
+
+.no-server-icon:hover {
+    border-radius: 35%;
+    background-color: rgba(114,137,218,1);
+    cursor: pointer;
+    color: white;
+}
+
+#discordServerBar {
+    margin-top: 0px !important;
+}
+
+#lineBreak {
+    height: 2px;
+    border-radius: 5px;
+    padding: 2px;
+    width: 50px;
+    background-color: var(--line-break);
+    margin-top: 10px;
+}
+
+.category {
+    color: #8e9297;
+    display: flex;
+    flex-direction: column;
+    padding: 2px; /* Was 10px */
+    user-select: none;
+    margin-top: 20px !important;
+}
+
+.category i {
+    padding-right: 5px;
+    display: inline-block;
+}
+
+.category .categoryArrow {
+    float: left;
+}
+
+.category div {
+    /* padding-top: 5px; Was 10px
+    padding-left: 15px; Was 15px */
+    padding: 5px 0px 5px 15px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: row;
+    transition: display 2s;
+    vertical-align: middle;
+}
+
+.category .categoryH1 {
+    margin: 0px !important;
+    margin-bottom: 5px !important;
+    font-size: 12px !important;
+}
+
+.category h1 {
+    margin: 0px !important;
+}
+
+.category .categoryH1:hover {
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.category div:hover {
+    /* color: #FFFFFF; */
+    color: rgba(180,180,200,1);
+    /* background-color: rgba(52,55,60,1); */
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* .category i:hover {
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.category h1:hover {
+    color: #FFFFFF;
+    cursor:pointer;
+} */
+
+/* width */
+::-webkit-scrollbar {
+    border-radius: 15%;
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
+.hide {
+    display: none !important;
+}
+
+/* #<#644746838628499466> */
+
+.focused {
+    background-color: rgba(57,60,67,1) !important;
+    color: #FFFFFF !important;
+    border-radius: 5px !important;
+    /* cursor: pointer; */
+}
+
+.focused:hover {
+    color: #FFFFFF !important;
+    background-color: rgba(57,60,67,1) !important;
+}
+
+#messageArea div {
+    padding: 15px 25px 15px 25px;
+}
+
+#messageArea div:hover{
+    background-color: var(--message-hover);
+}
+
+#messageArea img {
+    max-height: 500px;
+    max-width: 500px;
+}
+
+#messageBox {
+    min-height: 45px;
+    max-height: 50%;
+    /* background-color: red; */
+    width: calc(100% - 544px);
+    position: fixed;
+    padding-bottom: 25px;
+}
+
+#messageBox {
+    display:flex;
+    background-color:var(--message-input);
+    color: black;
+    /* padding: 6px; */
+    padding: 0px 0px 0px 0px;
+    border-radius: 5px;
+    width: calc(100% - 594px);
+    /* margin: 25px;
+    margin-bottom: 40px; */
+    margin: 5px 25px 25px 25px;
+    overflow-y: scroll;
+    position: fixed;
+    bottom: 0;
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+}
+
+#message_left {
+    padding: 15px 0px 15px 12px;
+    display:flex;
+    /* background-color: red; */
+    width: 10%;
+    height: 100%;
+}
+
+#message_input {
+    display:flex;
+    /* background-color: green; */
+    width: calc(100% - 60px);
+    height: 100%;
+}
+
+#message_input textarea {
+    padding-top: 12px;
+    font-size: 17px;
+    padding: 10px;
+    height: 100%;
+    resize: none;
+    width: 100%;
+    max-width: 100%;
+    border: none;
+    background-color: var(--message-input);
+    color: var(--text-normal);
+    overflow-y: hidden;
+    font-family: Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+#message_right {
+    padding-top: 7px;
+    display:flex;
+    /* background-color: blue; */
+    /* width: 80px; */
+    height: 100%;
+}
+
+i {
+    color: var(--icon);
+}
+i:hover {
+    color: var(--icon-hover);
+    cursor: pointer;
+}
+
+#message_right div {
+    padding: 5px;
+}
+
+#message_right div:hover {
+    cursor: pointer;
+}
+
+#message_right div i {
+    width: 30px;
+    height: 30px;
+}
+
+#emoji {
+    filter: grayscale(100%);
+    height:22px;
+    width:22px;
+    background-image: url("Images/Icons/emojis.png");
+}
+#emoji:hover {
+    filter: none;
+}
+
+::placeholder {
+    color: #72767d;
+}
+
+#message_box:focus {
+    outline: none;
+    border: none;
+}
+
+.serverFocused {
+    border-radius: 35% !important;
+    background-color: rgba(114,137,218,1);
+}
+
+span {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    /* width */
+}
+
+#botArea {
+    position: fixed;
+    height: 52px;
+    width: 240px;
+    background-color:var(--bot-bar);
+}
+
+canvas {
+    margin-top: 70px;
+}
+
+.hideThis {
+    display: none !important;
 }
