--- a/CthulhuBotPy/web/style.css
+++ b/CthulhuBotPy/web/style.css
@@ -873,7 +873,7 @@ canvas {
 }
 
 .status_emoji {
-    padding-right:5px;
+    margin-right:5px;
     display:inline-block;
     width: 14px;
     height: 14px;
